--- a/Lesson1_MetricsManager/Properties/launchSettings.json
+++ b/Lesson1_MetricsManager/Properties/launchSettings.json
@@ -4,24 +4,14 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:63294",
-      "sslPort": 44395
+      "applicationUrl": "http://localhost:51684"
     }
   },
   "profiles": {
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "weatherforecast",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
-    },
-    "Lesson1_MetricsManager": {
-      "commandName": "Project",
-      "launchBrowser": true,
-      "launchUrl": "weatherforecast",
-      "applicationUrl": "https://localhost:5001;http://localhost:5000",
+      "launchUrl": "api/Temp/read",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
